--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -209,6 +209,15 @@
                     custom:font="MuseoSansRounded-700.otf" />
             </RelativeLayout>
 
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+
             <LinearLayout
                 android:layout_below="@+id/emergency_checkBox_holder"
                 android:layout_width="fill_parent"
@@ -229,12 +238,6 @@
                     android:id="@+id/emergency_sms_checkbox" />
 
             </LinearLayout>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical">
 
             <com.widget.CustomButton
                 android:id="@id/done_button"
