--- a/app/src/main/res/layout/fragment_passwordverification.xml
+++ b/app/src/main/res/layout/fragment_passwordverification.xml
@@ -27,9 +27,19 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/register_password_confirm"
+                android:text="@string/password_must"
+                android:textColor="@color/holo_red_light"
+                android:textSize="25sp" />
+
+            <com.widget.CustomTextView
+                style="@style/MuseoSansRounded_300_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dip"
+                android:gravity="center"
+                android:text="@string/password_combination"
                 android:textColor="#111111"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:id="@+id/registration_fields"
@@ -92,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dip"
                 android:layout_marginRight="50dip"
-                android:textColor="@color/holo_blue_dark"
+                android:textColor="@drawable/btn_holo_text"
                 android:layout_marginTop="20dip"
                 android:background="@drawable/white_holo_button"
                 android:minHeight="0.0dip"
