--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e5e5e5"
-    tools:context="com.sust.project.blooddonation.mainscreen.MainActivity"
+    tools:context="com.project.bluepandora.donatelife.activities.MainActivity"
     tools:ignore="MergeRootFrame">
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-
         android:layout_height="match_parent">
 
-        <!-- Framelayout to display Fragments -->
-
+        <!-- FrameLayout to display Fragments -->
         <FrameLayout
-
             android:id="@+id/frame_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
-
-        <!-- Listview to display slider menu -->
-
+            android:layout_height="match_parent" />
+        <!-- ListView to display slider menu -->
         <ListView
             android:id="@+id/list_slidermenu"
-            android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
-            android:background="@drawable/list_view_back_selected"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
+            android:background="@drawable/list_view_back_selected"
             android:choiceMode="singleChoice"
             android:divider="@drawable/list_view_back_default"
-            android:listSelector="@drawable/list_view_back"
-            android:dividerHeight="@null" />
+            android:dividerHeight="@null"
+            android:listSelector="@drawable/list_view_back" />
+
     </android.support.v4.widget.DrawerLayout>
+
 
 </FrameLayout>
