--- a/app/src/main/res/layout/fragment_mobileverification.xml
+++ b/app/src/main/res/layout/fragment_mobileverification.xml
@@ -27,9 +27,19 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textColor="@color/holo_red_light"
+                android:text="@string/mobile_number_must"
+                android:textSize="25sp" />
+
+            <com.widget.CustomTextView
+                style="@style/MuseoSansRounded_300_text"
+                android:layout_width="fill_parent"
+                android:layout_margin="10dip"
+                android:layout_height="wrap_content"
+                android:gravity="center"
                 android:textColor="#111111"
                 android:text="@string/register_phone_number_code_confirm"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -112,7 +122,7 @@
                 style="@style/MuseoSansRounded_700_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/holo_blue_dark"
+                android:textColor="@drawable/btn_holo_text"
                 android:layout_marginLeft="50dip"
                 android:layout_marginRight="50dip"
                 android:layout_marginTop="20dip"
