--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -33,7 +33,7 @@
             android:orientation="vertical">
 
             <Spinner
-                android:id="@+id/registration_country"
+                android:id="@+id/country_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -66,7 +66,7 @@
                 android:textSize="20.0sp" />
 
             <com.widget.CustomTextView
-                android:id="@+id/registration_cc"
+                android:id="@+id/country_code_text_view"
                 style="@style/MuseoSansRounded_300_text"
                 android:layout_width="wrap_content"
                 android:layout_toRightOf="@+id/plus"
@@ -79,7 +79,7 @@
                 android:textSize="20sp" />
 
             <com.widget.CustomEditText
-                android:id="@+id/registration_phone"
+                android:id="@+id/mobile_number_edit_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -121,7 +121,7 @@
                 android:textStyle="bold" />
 
             <com.widget.CustomEditText
-                android:id="@+id/check_reg_pass"
+                android:id="@+id/password_edit_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
@@ -142,7 +142,7 @@
         </RelativeLayout>
 
         <com.widget.CustomButton
-            android:id="@+id/registration_submit"
+            android:id="@+id/log_in_button"
             style="@style/MuseoSansRounded_700_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -155,7 +155,7 @@
             android:textSize="20.0sp" />
 
         <com.widget.CustomButton
-            android:id="@+id/signup"
+            android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
