--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
     tools:ignore="MergeRootFrame">
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
+        android:id="@id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <!-- FrameLayout to display Fragments -->
         <FrameLayout
-            android:id="@+id/frame_container"
+            android:id="@id/frame_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
         <!-- ListView to display slider menu -->
