--- a/app/src/main/res/layout/activity_settings_legacy.xml
+++ b/app/src/main/res/layout/activity_settings_legacy.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/actionbar"
+        android:id="@id/actionbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/actionbar_background"
@@ -15,7 +15,6 @@
         android:title="Settings"
         app:navigationContentDescription="@string/abc_action_bar_up_description"
         app:navigationIcon="?attr/homeAsUpIndicator" />
-
 
     <ListView
         android:id="@android:id/list"
