--- a/app/src/main/res/layout/card_feed_view.xml
+++ b/app/src/main/res/layout/card_feed_view.xml
@@ -23,7 +23,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@id/bloodGroup_holder"
+                android:id="@id/blood_group_holder"
                 android:layout_width="@dimen/card_view_blood_width"
                 android:layout_height="@dimen/card_view_blood_height"
                 android:background="@drawable/emergency_textview_background"
@@ -31,7 +31,7 @@
                 android:orientation="vertical">
 
                 <com.widget.CustomTextView
-                    android:id="@id/bloodGroupID_text_view"
+                    android:id="@id/blood_group_text_view"
                     style="@style/MuseoSansRounded_700_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
                     android:textSize="50sp" />
 
                 <com.widget.CustomTextView
-                    android:id="@id/bloodAmountID_text_view"
+                    android:id="@id/blood_amount_text_view"
                     style="@style/MuseoSansRounded_700_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -52,13 +52,14 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@id/details_holder_linear_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@android:color/transparent"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@id/info_holder"
+                    android:id="@id/info_holder_linear_layout"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
@@ -66,7 +67,7 @@
                     android:background="@android:color/transparent">
 
                     <RelativeLayout
-                        android:id="@id/info"
+                        android:id="@id/info_holder_relative_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|top"
@@ -87,7 +88,7 @@
                             android:textSize="16sp" />
 
                         <ImageButton
-                            android:id="@id/option_button_1"
+                            android:id="@id/popup_menu_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
@@ -98,7 +99,7 @@
                             android:src="@drawable/feed_item_popup" />
 
                         <com.widget.CustomTextView
-                            android:id="@id/timeStamp_text_view"
+                            android:id="@id/timestamp_text_view"
                             style="@style/MuseoSansRounded_300_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -114,7 +115,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@id/info_holder"
+                    android:id="@id/area_contact_info_holder"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
@@ -132,7 +133,7 @@
                         android:paddingTop="5dip">
 
                         <com.widget.CustomTextView
-                            android:id="@id/hospitalNameID_text_view"
+                            android:id="@id/hospital_name_text_view"
                             style="@style/MuseoSansRounded_300_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -158,14 +159,14 @@
                         android:orientation="horizontal">
 
                         <com.widget.CustomTextView
-                            android:id="@+id/mobileNumberID_text_view"
+                            android:id="@id/contact_text_view"
                             style="@style/MuseoSansRounded_300_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
-                            android:layout_toLeftOf="@id/areaNameID_text_view"
-                            android:layout_toStartOf="@id/areaNameID_text_view"
+                            android:layout_toLeftOf="@id/area_name_text_view"
+                            android:layout_toStartOf="@id/area_name_text_view"
                             android:ellipsize="marquee"
                             android:fadingEdge="horizontal"
                             android:gravity="center|start"
@@ -180,7 +181,7 @@
                             android:textSize="14sp" />
 
                         <com.widget.CustomTextView
-                            android:id="@id/areaNameID_text_view"
+                            android:id="@id/area_name_text_view"
                             style="@style/MuseoSansRounded_300_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -202,5 +203,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </FrameLayout>
