--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -11,7 +11,7 @@
         android:paddingTop="@dimen/abc_action_bar_default_height_material">
 
         <ProgressBar
-            android:id="@+id/progress"
+            android:id="@id/progress_bar"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,13 +19,13 @@
             android:layout_centerVertical="true" />
 
         <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@id/swiperefresh"
+            android:id="@id/swipe_refresh_layout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_alignParentTop="true">
 
             <ListView
-                android:id="@id/list"
+                android:id="@id/feed_list_view"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:divider="@null"
@@ -36,7 +36,7 @@
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <ImageButton
-            android:id="@+id/action_button"
+            android:id="@id/action_button"
             android:layout_width="70dip"
             android:layout_height="70dip"
             android:layout_alignParentBottom="true"
