--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content">
 
                 <com.widget.CustomTextView
-                    android:id="@+id/from"
+                    android:id="@id/from_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -34,19 +34,21 @@
                     app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
-                    android:id="@+id/mobile_number_text_view"
+                    android:id="@id/mobile_number_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dip"
+                    android:layout_marginStart="5dip"
                     android:layout_marginTop="15dip"
-                    android:layout_toRightOf="@+id/from"
+                    android:layout_toRightOf="@id/from_text_view"
+                    android:layout_toEndOf="@id/from_text_view"
                     android:text="@string/dummy_mobile_number_ID"
                     android:textColor="#000000"
                     android:textSize="20sp"
                     app:font="MuseoSansRounded-300.otf" />
 
                 <com.widget.CustomTextView
-                    android:id="@+id/text_counter_text_view"
+                    android:id="@id/text_counter_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
