--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,7 +5,7 @@
         <item>@string/blood_feed</item>
         <item>@string/blood_request</item>
         <item>@string/profile</item>
-        <item>@string/hospital</item>
+        <!--<item>@string/hospital</item>-->
         <item>@string/settings</item>
         <item>@string/feedback</item>
         <item>@string/about_us</item>
@@ -34,7 +34,7 @@
         <item>@drawable/ic_card_feed_white_18dp</item>
         <item>@drawable/ic_request_blood_white_18dp</item>
         <item>@drawable/ic_account_circle_white_18dp</item>
-        <item>@drawable/ic_account_circle_white_18dp</item>
+        <!--<item>@drawable/ic_account_circle_white_18dp</item>-->
         <item>@drawable/ic_settings_white_18dp</item>
         <item>@drawable/ic_feedback_white_18dp</item>
         <item>@drawable/ic_about_white_18dp</item>
@@ -42,7 +42,7 @@
     <array name="nav_drawer_backgrounds">
         <item>@drawable/list_view_back_default</item>
         <item>@drawable/list_view_back_default</item>
-        <item>@drawable/list_view_back_default</item>
+        <!--        <item>@drawable/list_view_back_default</item>-->
         <item>@drawable/list_view_back_with_shadow</item>
         <item>@drawable/transparent</item>
         <item>@drawable/transparent</item>
